fixed box-shadow for logo image; added text-transform to .nav-el; added word-spacing, font-style to blockquote p

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ footer {
    font-size: 120%;
    line-height: 150%;
    padding: 1%;
-   margin: 1%
+   margin: 1%;
+   text-transform: capitalize;
 }
 
 .logo {
@@ -26,7 +27,7 @@ footer {
    margin-left: auto;
    margin-right: auto;
    margin-top: 10px;
-   box-shadow: 0 19px 38px #1f1d29, 0 15px 12px #1f1d29;
+   box-shadow: 0 19px 38px #ffffff, 0 15px 12px #ffffff;
    margin-bottom: 10px;
 }
 
@@ -53,7 +54,9 @@ footer {
 
 blockquote p {
    font-family: 'Lobster', cursive;
+   word-spacing: 10px;
    font-weight: bold;
+      font-style: oblique;
 }
 
 strong {
